WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
19884
Locating a store at www.366.ru doesn't work
https://bugs.webkit.org/show_bug.cgi?id=19884
Summary
Locating a store at www.366.ru doesn't work
Alexey Proskuryakov
Reported
2008-07-03 09:29:16 PDT
Steps to reproduce: 1) Open
http://www.366.ru/stores/
2) Choose any metro station in the rightmost pop-up. Results: redirected to the main page with an URL like
http://www.366.ru/?region=77&subregion=82
Expected results: the URL should be
http://www.366.ru/stores/?region=77&subregion=82
Attachments
proposed fix
(3.45 KB, patch)
2008-07-03 12:02 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-07-03 12:02:48 PDT
Created
attachment 22069
[details]
proposed fix
Darin Adler
Comment 2
2008-07-03 12:04:02 PDT
Comment on
attachment 22069
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 3
2008-07-03 12:14:39 PDT
Committed revision 34986.
Alexey Proskuryakov
Comment 4
2009-03-20 01:47:50 PDT
***
Bug 7763
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5
2009-03-20 01:49:50 PDT
***
Bug 18166
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6
2009-03-20 01:51:28 PDT
***
Bug 20378
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug