        Reviewed by Darin.

https://bugs.webkit.org/show_bug.cgi?id=19884
        Locating a store at www.366.ru doesn't work

        Test: fast/forms/submit-with-base.html

        * html/HTMLFormElement.cpp: (WebCore::HTMLFormElement::submit): Treat empty action the same
        as missing one - ignore base URL.



Canonical link: https://commits.webkit.org/27429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34986 268f45cc-cd09-0410-ab3c-d52691b4dbfc